test/bad/b1.erl
-module (b1).

f1() -> "" + 1.

f2() -> 1 + "".
